Add Schedule, and refactor Event and Campaign
