# server/src/routes/index.js
@@ -3,10 +3,13 @@ import campaign from './campaign'
 import auth from './auth'
 import swagger from './swagger'
 import events from './event'
+import schedule from './schedule';
+
 
 export default (app) => {
     auth(app)
     campaign(app)
     events(app)
     swagger(app)
+    schedule(app)
 }
